# claude-lux-plugin-boilerplate

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.plugin_name}}/: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  plugin.json  pyproject.toml
{{cookiecutter.plugin_name}}/.github/workflows/: ci.yml
{{cookiecutter.plugin_name}}/hooks/: post_tool_use.py  session_start.py  stop.py
{{cookiecutter.plugin_name}}/scripts/: register.py
{{cookiecutter.plugin_name}}/tests/: conftest.py  test_cli.py  test_config.py  test_paths.py
{{cookiecutter.plugin_name}}/{{cookiecutter.plugin_name}}/: __init__.py  cli.py  client.py  config.py  hooks.py  paths.py
